--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                         <img src="../img/experience/developer.svg" alt="university"
                       /></picture>
                     </div>
-                    <h4 class="title title_fz14">Front-End Developer (REACT.js)</h4>
+                    <h4 class="title title_fz14">Programming Languages Teacher</h4>
                     <div class="experience__item-location">Impact Academies & Camps | Кишинев (январь 2022 - ...)</div>
                   </div>
                   <p class="experience__item-text">
