--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
               <div>
                 <h4 class="title title_fz14">Web-разработка</h4>
                 <div class="about__skills-text">
-                  На данный момент, я работаю в качестве MERN-разработчика. Проект, над которым я сейчас работаю, базируется на REACT,
-                  Node.js, и MongoDB с использованием JS на всех уровнях.
+                  Я - Front-End разработчик. Клиентская часть проекта, над которым я сейчас работаю, базируется на REACT, Next.js,
+                  Tailwindcss, а административная часть использует Angular, с которым я тоже имел опыт работы.
                 </div>
               </div>
             </div>
@@ -256,7 +256,7 @@
                       /></picture>
                     </div>
                     <h4 class="title title_fz14">Udemy</h4>
-                    <div class="experience__item-location">Курсы по Web-разработке, Wordpress, React</div>
+                    <div class="experience__item-location">Курсы по Web-разработке, Wordpress, React, NodeJS, ExpressJS, NextJS</div>
                   </div>
                   <p class="experience__item-text">
                     Для меня уже вошло в привычку, просматривать в свободное время обучающие видео и проходить туториалы по Frontend -
@@ -297,7 +297,7 @@
                       /></picture>
                     </div>
                     <h4 class="title title_fz14">Front-End Developer (REACT.js)</h4>
-                    <div class="experience__item-location">GARM INC | Кишинев (июнь 2021 - ...)</div>
+                    <div class="experience__item-location">GARM INC | Кишинев (июнь 2021 - январь 2022)</div>
                   </div>
                   <p class="experience__item-text">
                     В мае 2021 у меня появилась возможность работать в проекте на стадии его самого начала. Используя CSS фреймворки и
@@ -320,8 +320,28 @@
                   </div>
                   <p class="experience__item-text">
                     Чтобы не забывать основы, но и делиться опытом , я начал преподавать детям в возрасте 14-17 лет JS, Python, CSS и HTML.
-                    Для меня это отличная возможность развивать социальные навыки, делиться опытом с коллегами и узнавать что-то новое, ведь
-                    у меня появилась возможность изучать и пробовать что-то новое.
+                    Для меня это отличная возможность развивать социальные навыки, делиться опытом с будущими коллегами и узнавать что-то
+                    новое, ведь у меня появилась возможность изучать и пробовать что-то новое.
+                  </p>
+                </div>
+              </li>
+              <li class="experience__item">
+                <div class="experience__item-wrapper">
+                  <div class="experience__item-head">
+                    <div class="experience__item-icon">
+                      <picture
+                        ><source srcset="../img/experience/developer.svg" type="image/webp" />
+                        <img src="../img/experience/developer.svg" alt="university"
+                      /></picture>
+                    </div>
+                    <h4 class="title title_fz14">Programming Languages Teacher</h4>
+                    <div class="experience__item-location">Qoobus Corporation | Кишинев (январь 2022 - ...)</div>
+                  </div>
+                  <p class="experience__item-text">
+                    В январе 2022 года я получил предложение принять участие в интересном проекте с технологиями, которые ранее мне не были
+                    известны. Это крупный стартап. Большое количество коллег, новых технологий и методология менеджмента проекта открыли во
+                    мне новое дыхание. На это проекте я применял уже имеющиеся знания для разработки клиентской части. Ключевые технологии:
+                    REACT, NextJS, Tailwindcss.
                   </p>
                 </div>
               </li>
@@ -458,6 +478,28 @@
             <p class="skills__item-text">
               С Git-ом сохраняется информация о всех изменениях в коде, начиная с самой первой строчки и обеспечивается удобная работа в
               команде над проектом в целом.
+            </p>
+          </div>
+          <div class="skills__item">
+            <picture
+              ><source srcset="../img/skills/next.svg" type="image/webp" />
+              <img src="../img/skills/git.svg" alt="git" class="skills__item-image"
+            /></picture>
+            <h4 class="title title_fz14 skills__item-title">Next.js</h4>
+            <p class="skills__item-text">
+              Полноценный фреймворк основанный на REACT-е. Его одного достаточно, чтобы построить полноценное SPA-приложение, которое при
+              этом будет SEO-оптимизированным и более производительным благодаря SSL.
+            </p>
+          </div>
+          <div class="skills__item">
+            <picture
+              ><source srcset="../img/skills/tailwind.svg" type="image/webp" />
+              <img src="../img/skills/git.svg" alt="git" class="skills__item-image"
+            /></picture>
+            <h4 class="title title_fz14 skills__item-title">Tailwind</h4>
+            <p class="skills__item-text">
+              Целый CSS-фреймворк. Для меня стало действительно открытием. С ним легко создавать стили и адаптировать дизайн наиболее
+              гибкими и простыми способами. MaterializeCss, Bootstrap, тихонько отдыхают;)
             </p>
           </div>
         </div>
