--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                         <img src="../img/experience/developer.svg" alt="university"
                       /></picture>
                     </div>
-                    <h4 class="title title_fz14">Programming Languages Teacher</h4>
+                    <h4 class="title title_fz14">Software Developer</h4>
                     <div class="experience__item-location">Qoobus Corporation | Кишинев (январь 2022 - ...)</div>
                   </div>
                   <p class="experience__item-text">
