ts added, alt attributes updtd

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
           <div class="skills__item">
             <picture
               ><source srcset="../img/skills/next.svg" type="image/webp" />
-              <img src="../img/skills/git.svg" alt="git" class="skills__item-image"
+              <img src="../img/skills/next.svg" alt="Next.js" class="skills__item-image"
             /></picture>
             <h4 class="title title_fz14 skills__item-title">Next.js</h4>
             <p class="skills__item-text">
@@ -494,12 +494,24 @@
           <div class="skills__item">
             <picture
               ><source srcset="../img/skills/tailwind.svg" type="image/webp" />
-              <img src="../img/skills/git.svg" alt="git" class="skills__item-image"
+              <img src="../img/skills/tailwind.svg" alt="Tailwind" class="skills__item-image"
             /></picture>
             <h4 class="title title_fz14 skills__item-title">Tailwind</h4>
             <p class="skills__item-text">
               Целый CSS-фреймворк. Для меня стало действительно открытием. С ним легко создавать стили и адаптировать дизайн наиболее
               гибкими и простыми способами. MaterializeCss, Bootstrap, тихонько отдыхают;)
+            </p>
+          </div>
+          <div class="skills__item">
+            <picture
+              ><source srcset="../img/skills/typescript.svg" type="image/webp" />
+              <img src="../img/skills/typescript.svg" alt="TypeScript" class="skills__item-image"
+            /></picture>
+            <h4 class="title title_fz14 skills__item-title">TypeScript</h4>
+            <p class="skills__item-text">
+              Язык программирования, позиционируемый, как средство разработки веб-приложений, расширяющий возможности JavaScript. Главная
+              причина существования TS, это возможность успокоить динамическую типизацию старого, доброго JS путем явного статического
+              назначения типов данных и не только!
             </p>
           </div>
         </div>
